[project]
name = "reification"
description = "Reified generics in Python to get type parameters at runtime"
keywords = ["typing", "generics", "parametric polymorphism", "reification", "type parameter", "reflection"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "WTFPL"}
maintainers = [
  {name = "curegit", email = "contact@curegit.jp"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: Freeware",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pip", "setuptools", "build", "twine", "black", "mypy"]

[project.urls]
homepage = "https://github.com/curegit/reification"
repository = "https://github.com/curegit/reification.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reification"]

[tool.setuptools.dynamic]
version = {attr = "reification.__version__"}
